feat: createGroupChat Go api working
